Version 1.3.4+svn:
 * language and i18n:
   * updated translations: French

Version 1.3.4:
 * campaigns
   * Two Brothers
     * made the 2nd guards event in scenario 3 depend on if the first answer
       was correct, now the 2nd event triggers later when the first ends in a
       fight
     * added one row of terrain in the 3rd and 4th scenario to make it look
       better with the new "boardgame style"
   * Heir to the Throne
     * edited the maps of the scenarios : "The Elves Besieged", "Blackwater
       Port", "Bay of Pearls", "Crossroads", "The Siege of Elensefar", 
       "Dwarven Doors", "The Lost General", "Elven Coucil"
     * adapted the names of the maps and cfgs of the HttT to match the scenario
       identification keys and the and the order of the scenarios
     * added the map of "Cliffs of Thoria"
     * changed one of the Orcish Warlords into a Sovereign and another one into
       a Slurbow for the variety in "Dwarven Doors" 
     * fixed the bug that made the undead leader unable to recruit because of a
       misspelled unit type in it's recruit list in "The Lost General"
   * The Rise of Wesnoth
     * added the level 3 outlaws ( Hunter, Outlaw Ranger, Fugitive, Highwayman )
       as a campaign - specific units in The Rise of Wesnoth
     * added 2 extra turns to finish "Temple of the Deep" on all difficulties
   * Eastern Invasion
     * Reduced the difficulty of "Northern Outpost" scenario by making the
       villages spawn averagely 1 less outlaws per village
     * Changed the way Ovaec joins the protagonist in "Two Paths" . Now he keeps
       all the XP he might get in "Northern Outpost"
   * Descent into Darkness
     * Fixed the unknown unit type bug in "Forever and ever, amen", the bug that
       made the Foolish heroes have 30 hitpoints and a broken dialog , all in
       the same scenario
 * map editor
   * the minimum map size is reduced to 1
   * fixed the random map generator
 * graphics